# loopmaster

./: .gitignore  .gitmodules  README.md  capture_anygrasp_grasp_pose.py  keyboard_control.py  navigation_live_map.py  play_cache_traj_skill.py  pyproject.toml  requirements.txt  rerun_arm_camera_frames.py  run_chat_server.md  run_mujoco_ik.sh  run_telegrip.sh
_grasp_runs/capture_anygrasp_grasp_pose-20260710-225911-b68136/: trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260710-234953-48bd16/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-004225-f86004/: trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-004512-c9937f/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-004744-33cc22/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-004955-0a6a01/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-005218-8bdd7e/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-005551-ce50f6/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-010538-896f7a/: grasp_pose_summary.json  trace.jsonl
_grasp_runs/capture_anygrasp_grasp_pose-20260711-010554-a1fd86/: grasp_pose_summary.json  trace.jsonl
docs/: agentic-architecture.md
loopmaster_agentic/: __init__.py  __main__.py  cli.py  server_bridge.py
scripts/: setup_ik_conda_env.sh
tests/: test_agentic_framework.py
web_page/: PROTOCOL.md  README.md  app.py  vending.db
(+302 files in other folders)
